Tue Feb 23 15:15:00 UTC 2010  Simon Massey  <sma at prismtech dot com>

        * ace/config-lynxos.h:
          #define ACE_LACKS_CEILL & ACE_LACKS_FLOORL

Tue Feb 23 08:59:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.4.h:
          VxWorks lacks floorl and ceill

Mon Feb 22 20:01:54 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Time_Value.{h,cpp}: Applied some patches from Olivier Langlois
          <olivier at olivierlanglois dot net> to fix some warnings.

Mon Feb 22 19:57:02 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Thread_Mutex.inl (ACE_Thread_Mutex::lock): Added a non-const
          lock() method.  Thanks to Phil for suggesting this.

Mon Feb 22 18:08:20 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Condition_Recursive_Thread_Mutex.cpp (ACE_Condition): Fixed
          a stray occurrence of the mutex() accessor that should be
          lock().  Thanks to Phil Mesnier for reporting this.

Mon Feb 22 15:00:11 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Time_Value.{h,cpp}: Reformatted/renamed the code to conform
          to ACE programming guidelines.

Mon Feb 22 13:40:14 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Condition_T.cpp: Changed the mutex() accessor to lock() to
          be consistent.

Mon Feb 22 13:39:09 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Recursive_Thread_Mutex.{h,inl}: Created a new lock() accessor
          so it's consistent with the other synchronizer accessors in ACE.

Sun Feb 21 21:25:21 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/Time_Value_Test.cpp: Added a test for the new operator<<
          implementation for ACE_Time_Value.  Thanks to Olivier Langlois
          <olivier at olivierlanglois dot net> for contributing this.
