@@ -1,3 +1,15 @@
+Tue Feb 23 19:45:39 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
+
+        * tests/OS_Test.cpp: Added tests for floorl() and ceill().  Thanks
+          to Olivier Langlois <olivier at olivierlanglois dot net> for
+          this fix.
+
+Tue Feb 23 19:43:36 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
+
+        * configure.ac: Added a check for ACE_CHECK_LACKS_FUNCS(floor ceil
+          floorl ceill).  Thanks to Olivier Langlois <olivier at
+          olivierlanglois dot net> for this fix.
+
 Tue Feb 23 15:15:00 UTC 2010  Simon Massey  <sma at prismtech dot com>
 
         * ace/config-lynxos.h:
